--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <hmtl>
-  <p>Hi</p>
+  <p>Hi! This is a website for human rights. This webstie goes from the full list of human rights to what I think about human rights. 
+    I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
+  <style>
+    background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+</html>
