--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
     I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
   <style>
     background-image: url("https://u.cubeupload.com/derter_menter/20220308/image/background.png"); 
+  </style>
 </html>
