--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <body>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
-<img src="https://www.iloveimg.com/download/bhgs34btnrvv81r9m77fljvp85jclsk2whz0jc7rqh681rmb3Aw8m1z3v5q4r03m7fpsp72ksknh80l4n93pdmnnm6y27dxzgdsl8d3wybdny2gt2lwcyjpkrxw5Az017w3zhnb5zvv4k2wxq0phqj87n2dnlm9l2kjn34wl1rbv0ynmhtd1/8">
+<img src="https://u.cubeupload.com/derter_menter/202203081.png">
   </body>
 </html>
