--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <body>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
-<img src="https://u.cubeupload.com/derter_menter/202203081.png">
   </body>
+  <style>
+    body {
+        background-image: url("https://u.cubeupload.com/derter_menter/202203081/image/background.png"); 
+    }  
+</style>
 </html>
