--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </body>
   <style>
     body {
-        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png/image/background.png"); 
+        background-image: url("https://u.cubeupload.com/derter_menter/20220308/image/background.png"); 
     }  
 </style>
 </html>
