--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    <title>PeopleRights</title>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
   </body>
