--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -3,6 +3,8 @@
     <title>Death Penalty - PeopleRights</title>
      <p>In several countries around the world, the death penalty has been the last resort for extremely severe crimes, from multiple murders to drug trafficking.
     But should this be a thing at all?</p>
+    <p>Here is a bar graph on the death penalty execuations per state:</p>
+    <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9049443"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
   </body>
   <style>
     body {
