--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <html>
   <center>
-  <body>
-    <title>PeopleRights</title>
+   <head>
+   <link rel="stylesheet" href="styles.css">
+   <title>PeopleRights</title>
+    </head>
+    <body>
     <a href='/'><button class="b /">Home</button></a>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
   </body>
-  <style>
-    body {
-        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
-    }
-    .b {
-  background-color: orange;
-  border: none;
-  padding: 14px 28px;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 7.5px;
-  display: inline-block;
-}
-
-          
-</style>
 </body>
 </center>  
 </html>
