--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
   <center>
+    <style>
+       body {
+       background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+    }
+    </style>
    <head>
    <link rel="stylesheet" href="styles.css">
    <title>PeopleRights</title>
     </head>
     <body>
     <a href='/'><button class="b /">Home</button></a
-    <a href='list'><button class="b /">List Of Human rights</button></a>
+    <a href='list'><button class="b /">Human Rights List</button></a>
     <a href='DeathPenalty'><button class="b /">Death Penalty</button></a>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
-  </body>
 </body>
 </center>  
 </html>
