--- a/list.html
+++ b/list.html
@@ -17,3 +17,6 @@ We are all equal before the law
 Our human rights are protected by law
 No unfair prison sentences
 We are always innocent until proven guilty
+  </p>
+  </body>
+<html>
