--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <title>PeopleRights</title>
     </head>
     <body>
-    <a href='/'><button class="b /">Home</button></a
-    <a href='list'><button class="b /">List</button></a>
+    <a href='/'><button class="b /">Home</button></a>
+    <a href='list'><button class="b /">List of Human Rights</button></a>
     <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
