--- a/list.html
+++ b/list.html
@@ -1,22 +1,23 @@
 <html>
+<head>
+<title = "People Rights - List">
 <body>
 <p>Here is the list of all the human rights:<p>
-<p>1. the right to life
-the right to a fair trial
-the right to privacy
-the right to vote
-freedom of expression
-freedom of religion
-freedom of assembly
-No torture
-No slavery
-No discrimination
-The right to life
-We have rights no matter where we go
-We are all equal before the law
-Our human rights are protected by law
-No unfair prison sentences
-We are always innocent until proven guilty
+  <p>The right to life<p>
+  <p>the right to a fair trial</p>
+  <p>the right to privacy</p>
+  <p>the right to vote</p>
+  <p>freedom of expression</p>
+	<p>freedom of religion</p>
+	<p>freedom of assembly</p>
+	<p>No torture</p>
+	<p>No slavery</p>
+	<p>No discrimination</p>
+	<p>We have rights no matter where we go</p>
+	<p>We are all equal before the law</p>
+	<p>Our human rights are protected by law</p>
+	<p>No unfair prison sentences</p>
+	<p>We are always innocent until proven guilty</p>
   </p>
   </body>
 <html>
