--- a/list.html
+++ b/list.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title = "People Rights - List">
+	<title>PeopleRights - List</title>
 <body>
 <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
