--- a/list.html
+++ b/list.html
@@ -1,7 +1,17 @@
 <html>
+ <style>
+       body {
+       background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+    }
+    </style>
 <head>
 	<title>PeopleRights - List</title>
+	<link rel="stylesheet" href="styles.css">
+</head>
 <body>
+<a href='/'><button class="b /">Home</button></a>
+<a href='list'><button class="b /">List of Human Rights</button></a>
+<a href='deathpenalty'><button class="b /">Death Penalty</button></a>
 <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
   <p>the right to a fair trial</p>
