--- a/list.html
+++ b/list.html
@@ -1,4 +1,5 @@
 <html>
+<center>
  <style>
        body {
        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
@@ -30,4 +31,5 @@
 	<p>We are always innocent until proven guilty</p>
   </p>
   </body>
+	</center>
 <html>
