--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -1,14 +1,20 @@
 <html>
-  <body>
+    <style>
+    body {
+        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+    }  
+</style>
+  <head>
     <title>Death Penalty - PeopleRights</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+  <a href='/'><button class="b /">Home</button></a>
+    <a href='list'><button class="b /">List of Human Rights</button></a>
+    <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
      <p>In several countries around the world, the death penalty has been the last resort for extremely severe crimes, from multiple murders to drug trafficking.
     But should this be a thing at all?</p>
     <p>Here is a bar graph on the death penalty execuations per state:</p>
     <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9049443"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
   </body>
-  <style>
-    body {
-        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
-    }  
-</style>
 </html>
