--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -1,4 +1,5 @@
 <html>
+<center>
     <style>
     body {
         background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
@@ -17,4 +18,5 @@
     <p>Here is a bar graph on the death penalty execuations per state:</p>
     <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9049443"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
   </body>
+</center>
 </html>
