--- a/list.html
+++ b/list.html
@@ -15,20 +15,34 @@
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
 <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
-  <p>the right to a fair trial</p>
-  <p>the right to privacy</p>
-  <p>the right to vote</p>
-  <p>freedom of expression</p>
-	<p>freedom of religion</p>
-	<p>freedom of assembly</p>
-	<p>No torture</p>
-	<p>No slavery</p>
-	<p>No discrimination</p>
-	<p>We have rights no matter where we go</p>
-	<p>We are all equal before the law</p>
-	<p>Our human rights are protected by law</p>
-	<p>No unfair prison sentences</p>
-	<p>We are always innocent until proven guilty</p>
+  <p>The right to a fair trial</p>
+  <p>The right to privacy</p>
+  <p>The right to vote</p>
+  <p>the right to move</p>
+  <p>The right to have a nationality<p>
+  <p>The right to seek a safe place to live</p>
+  <p>The right to our own things</p>
+  <p>The right to freedom of though
+  <p>The right to freedom of expression</p>
+  <p>The right to freedom of religion</p>
+  <p>The right to freedom of assembly</p>
+  <p>The right to democracy<p>
+  <p>The right to sercuity</p>
+  <p>The right to play<p>
+  <p>The right to food and shelter</p>
+  <p>The right to education</p>
+  <p>The right to copyright</p>
+  <p>The right to a free and fair world</p>
+  <p>The right to responsibilty</p>
+  <p>We also have workers rights</p>
+  <p>No torture</p>
+  <p>No slavery</p>
+  <p>No discrimination</p>
+  <p>We have rights no matter where we go</p>
+  <p>We are all equal before the law</p>
+  <p>Our human rights are protected by law</p>
+  <p>No unfair prison sentences</p>
+  <p>We are always innocent until proven guilty</p>
   </p>
   </body>
 	</center>
