--- a/list.html
+++ b/list.html
@@ -22,7 +22,7 @@
   <p>The right to have a nationality<p>
   <p>The right to seek a safe place to live</p>
   <p>The right to our own things</p>
-  <p>The right to freedom of though
+  <p>The right to freedom of though</p>
   <p>The right to freedom of expression</p>
   <p>The right to freedom of religion</p>
   <p>The right to freedom of assembly</p>
@@ -43,6 +43,7 @@
   <p>Our human rights are protected by law</p>
   <p>No unfair prison sentences</p>
   <p>We are always innocent until proven guilty</p>
+  <p>We are all born free and equal</p>
   </p>
   </body>
 	</center>
