--- a/list.html
+++ b/list.html
@@ -13,37 +13,37 @@
 <a href='/'><button class="b /">Home</button></a>
 <a href='list'><button class="b /">List of Human Rights</button></a>
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
-<p>Here is the list of all the human rights:<p>
-  <p>The right to life<p>
-  <p>The right to a fair trial</p>
-  <p>The right to privacy</p>
-  <p>The right to vote</p>
-  <p>the right to move</p>
-  <p>The right to have a nationality<p>
-  <p>The right to seek a safe place to live</p>
-  <p>The right to our own things</p>
-  <p>The right to freedom of though</p>
-  <p>The right to freedom of expression</p>
-  <p>The right to freedom of religion</p>
-  <p>The right to freedom of assembly</p>
-  <p>The right to democracy<p>
-  <p>The right to sercuity</p>
-  <p>The right to play<p>
-  <p>The right to food and shelter</p>
-  <p>The right to education</p>
-  <p>The right to copyright</p>
-  <p>The right to a free and fair world</p>
-  <p>The right to responsibilty</p>
-  <p>We also have workers rights</p>
-  <p>No torture</p>
-  <p>No slavery</p>
-  <p>No discrimination</p>
-  <p>We have rights no matter where we go</p>
-  <p>We are all equal before the law</p>
-  <p>Our human rights are protected by law</p>
-  <p>No unfair prison sentences</p>
-  <p>We are always innocent until proven guilty</p>
-  <p>We are all born free and equal</p>
+<p "style=color:white;">Here is the list of all the human rights:<p>
+  <p "style=color:white;">The right to life<p>
+  <p "style=color:white;">The right to a fair trial</p>
+  <p "style=color:white;">The right to privacy</p>
+  <p "style=color:white;">The right to vote</p>
+  <p "style=color:white;">the right to move</p>
+  <p "style=color:white;">The right to have a nationality<p>
+  <p "style=color:white;">The right to seek a safe place to live</p>
+  <p "style=color:white;">The right to our own things</p>
+  <p "style=color:white;">The right to freedom of though</p>
+  <p "style=color:white;">The right to freedom of expression</p>
+  <p "style=color:white;">The right to freedom of religion</p>
+  <p "style=color:white;">The right to freedom of assembly</p>
+  <p "style=color:white;">The right to democracy<p>
+  <p "style=color:white;">The right to sercuity</p>
+  <p "style=color:white;">The right to play<p>
+  <p "style=color:white;">The right to food and shelter</p>
+  <p "style=color:white;">The right to education</p>
+  <p "style=color:white;">The right to copyright</p>
+  <p "style=color:white;">The right to a free and fair world</p>
+  <p "style=color:white;">The right to responsibilty</p>
+  <p "style=color:white;">We also have workers rights</p>
+  <p "style=color:white;">No torture</p>
+  <p "style=color:white;">No slavery</p>
+  <p "style=color:white;">No discrimination</p>
+  <p "style=color:white;">We have rights no matter where we go</p>
+  <p "style=color:white;">We are all equal before the law</p>
+  <p "style=color:white;">Our human rights are protected by law</p>
+  <p "style=color:white;">No unfair prison sentences</p>
+  <p "style=color:white;">We are always innocent until proven guilty</p>
+  <p "style=color:white;">We are all born free and equal</p>
   </p>
   </body>
 	</center>
