--- a/list.html
+++ b/list.html
@@ -13,8 +13,8 @@
 <a href='/'><button class="b /">Home</button></a>
 <a href='list'><button class="b /">List of Human Rights</button></a>
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
-<p "style=color:white;">Here is the list of all the human rights:<p>
-  <p "style=color:white;">The right to life<p>
+<p style="color:white;">Here is the list of all the human rights:<p>
+  <p style="color:white;">The right to life<p>
   <p "style=color:white;">The right to a fair trial</p>
   <p "style=color:white;">The right to privacy</p>
   <p "style=color:white;">The right to vote</p>
