--- a/list.html
+++ b/list.html
@@ -1,11 +1,12 @@
 <html>
 <center>
+<head>
  <style>
        body {
        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+	   color: white;
     }
     </style>
-<head>
 	<title>PeopleRights - List</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
