--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -1,11 +1,12 @@
 <html>
 <center>
+<head>
     <style>
     body {
         background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+        color: white;
     }  
 </style>
-  <head>
     <title>Death Penalty - PeopleRights</title>
     <link rel="stylesheet" href="styles.css">
   </head>
