--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -4,7 +4,7 @@
     <style>
     body {
         background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
-        color: white;
+        color: red;
     }  
 </style>
     <title>Death Penalty - PeopleRights</title>
