--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -22,7 +22,7 @@
       <p> Some may say that it is the safest option as if a murderer is given the death penalty, it insures the world that they will not kill anyone again. <br/>
           Another reason is that the punishment should fit the crime - if you murder someone, you should also go through the pain that they experienced. It balances out the pain between the two individuals, making society fairer. <br/>
           Finally, whilst there is a saying of "everyone deserves a second chance in life", do deadly,horrendous criminals deserve a second chance? I think not. </p>
-      <h1>Reasons for not keeping the death penalty</p>
+      <h1>Reasons for not keeping the death penalty</h1>
       <p>A common misconception is that the death penalty scares others from commiting crimes as they know a punishment could be their own life. This is not true - no sufficient evidence has beem found that the death penalty lessens the amount of crimes due to people being scared of the consiquences. <br/>
       Secondly, is the death penalty even the worst punishment you can give for a crime? Life in prison without parole creates a lot more suffering as it is for their whole life, instead of just one bit of instant pain that leads to their death.
           Thirdly, lining in the human rights, one of them is "no one can take away your rights". However, this right is broken as the right "you have the right to live" is being taken away. The human rights list applies to all human lives, not just criminals. No matter their actions, killing them is not the right action to take.
