--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -17,7 +17,7 @@
      <p>In several countries around the world, the death penalty has been the last resort for extremely severe crimes, from multiple murders to drug trafficking.
     But should this be a thing at all?</p>
     <p>Here is a bar graph on the death penalty execuations per state:</p>
-    <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9049443"><script src="https://public.flourish.studio/resources/embed.js"></script></div
+    <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9049443"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
       <h1>Reasons for keeping the death penalty</h1>
       <p> Some may say that it is the safest option as if a murderer is given the death penalty, it insures the world that they will not kill anyone again. <br/>
           Another reason is that the punishment should fit the crime - if you murder someone, you should also go through the pain that they experienced. It balances out the pain between the two individuals, making society fairer. <br/>
