--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -25,7 +25,10 @@
       <h1>Reasons for not keeping the death penalty</h1>
       <p>A common misconception is that the death penalty scares others from commiting crimes as they know a punishment could be their own life. This is not true - no sufficient evidence has beem found that the death penalty lessens the amount of crimes due to people being scared of the consiquences. <br/>
       Secondly, is the death penalty even the worst punishment you can give for a crime? Life in prison without parole creates a lot more suffering as it is for their whole life, instead of just one bit of instant pain that leads to their death.
-          Thirdly, lining in the human rights, one of them is "no one can take away your rights". However, this right is broken as the right "you have the right to live" is being taken away. The human rights list applies to all human lives, not just criminals. No matter their actions, killing them is not the right action to take.
+      Thirdly, lining in the human rights, one of them is "no one can take away your rights". However, this right is broken as the right "you have the right to live" is being taken away. The human rights list applies to all human lives, not just criminals. No matter their actions, killing them is not the right action to take.
+      Finally, the death penaly can mean that innocent people get murdered. According to <a href="https://en.wikipedia.org/wiki/Wrongful_execution">this Wikipedia article</a>, 20 people that have been killed by the death penalty in the United States may be innocent. </p>
+      <h1>My stance on the death penalty</h1>
+      <p>In my opinion, the death penalty should be abolished as no statistic proves that it stops others from commiting crimes because the frightening death penalty punishment scares them and the possibility of killing innocent people that did not commit that crime. Whilst I do agree that people who do such devastating crimes do not deserve a second chance in society, a life prison sentece without parole gives then no chance of freedom and I also believe that this creates more suffering for the criminal in the long term.</p>
   </body>
 </center>
 </html>
