--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -18,18 +18,23 @@
     But should this be a thing at all?</p>
     <p>Here is a bar graph on the death penalty execuations per state:</p>
     <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9049443"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+      <div style="border: 8px dashed blue; padding: 20px;">
       <h1>Reasons for keeping the death penalty</h1>
       <p> Some may say that it is the safest option as if a murderer is given the death penalty, it insures the world that they will not kill anyone again. <br/>
           Another reason is that the punishment should fit the crime - if you murder someone, you should also go through the pain that they experienced. It balances out the pain between the two individuals, making society fairer. <br/>
           Finally, whilst there is a saying of "everyone deserves a second chance in life", do deadly,horrendous criminals deserve a second chance? I think not. </p>
+      </div>
+      <div style=" border: 8px solid black; padding: 20px;">
       <h1>Reasons for not keeping the death penalty</h1>
       <p>A common misconception is that the death penalty scares others from commiting crimes as they know a punishment could be their own life. This is not true - no sufficient evidence has beem found that the death penalty lessens the amount of crimes due to people being scared of the consiquences. <br/>
       Secondly, is the death penalty even the worst punishment you can give for a crime? Life in prison without parole creates a lot more suffering as it is for their whole life, instead of just one bit of instant pain that leads to their death.
       Thirdly, lining in the human rights, one of them is "no one can take away your rights". However, this right is broken as the right "you have the right to live" is being taken away. The human rights list applies to all human lives, not just criminals. No matter their actions, killing them is not the right action to take.
       Finally, the death penaly can mean that innocent people get murdered. According to <a href="https://en.wikipedia.org/wiki/Wrongful_execution">this Wikipedia article</a>, 20 people that have been killed by the death penalty in the United States may be innocent. </p>
+      </div>
       <div style=" border: 8px dotted white; padding: 20px;">
       <h1>My stance on the death penalty</h1>
       <p>In my opinion, the death penalty should be abolished as no statistic proves that it stops others from commiting crimes because the frightening death penalty punishment scares them and the possibility of killing innocent people that did not commit that crime. Whilst I do agree that people who do such devastating crimes do not deserve a second chance in society, a life prison sentece without parole gives then no chance of freedom and I also believe that this creates more suffering for the criminal in the long term.</p>
+      </div>
   </body>
 </center>
 </html>
