--- a/list.html
+++ b/list.html
@@ -14,7 +14,8 @@
 <a href='/'><button class="b /">Home</button></a>
 <a href='list'><button class="b /">List of Human Rights</button></a>
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
-<p>Here is the list of all the human rights:<p>
+<div style="text-align: Left;">
+  <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
   <p "style=color:white;">The right to a fair trial</p>
   <p "style=color:white;">The right to privacy</p>
@@ -46,6 +47,9 @@
   <p "style=color:white;">We are always innocent until proven guilty</p>
   <p "style=color:white;">We are all born free and equal</p>
   </p>
+</div>
+<div style="text align: right;">
+<h1>Human rights I disagree with</h1>
   </body>
 	</center>
 <html>
