--- a/list.html
+++ b/list.html
@@ -48,7 +48,7 @@
   <p "style=color:white;">We are all born free and equal</p>
   </p>
 </div>
-<div style="text align: right;">
+<div style="float: right;">
 <h1>Human rights I disagree with</h1>
   </body>
 	</center>
