--- a/list.html
+++ b/list.html
@@ -49,7 +49,7 @@
   </p>
 </div>
 <div style="float: right;">
-<h1>Human rights I disagree with</h1>
+<h1><u>Human rights I disagree with<u></h1>
   </body>
 	</center>
 <html>
