--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -13,7 +13,8 @@
   <body>
   <a href='/'><button class="b /">Home</button></a>
     <a href='list'><button class="b /">List of Human Rights</button></a>
-    <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+      <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+    <h1><u>The Death Penalty</u></h1>
      <p>In several countries around the world, the death penalty has been the last resort for extremely severe crimes, from multiple murders to drug trafficking.
     But should this be a thing at all?</p>
     <p>Here is a bar graph on the death penalty execuations per state:</p>
@@ -27,7 +28,7 @@
       </div>
       <br>
       <div style=" border: 8px solid black; padding: 20px;">
-      <h1>Reasons for not keeping the death penalty</h1>
+        <h1><u>Reasons for not keeping the death penalty</u></h1>
       <p>A common misconception is that the death penalty scares others from commiting crimes as they know a punishment could be their own life. This is not true - no sufficient evidence has beem found that the death penalty lessens the amount of crimes due to people being scared of the consiquences. <br/>
       Secondly, is the death penalty even the worst punishment you can give for a crime? Life in prison without parole creates a lot more suffering as it is for their whole life, instead of just one bit of instant pain that leads to their death.
       Thirdly, lining in the human rights, one of them is "no one can take away your rights". However, this right is broken as the right "you have the right to live" is being taken away. The human rights list applies to all human lives, not just criminals. No matter their actions, killing them is not the right action to take.
@@ -35,7 +36,7 @@
       </div>
       <br>
       <div style=" border: 8px dotted white; padding: 20px;">
-      <h1>My stance on the death penalty</h1>
+        <h1><u>My stance on the death penalty</u></h1>
       <p>In my opinion, the death penalty should be abolished as no statistic proves that it stops others from commiting crimes because the frightening death penalty punishment scares them and the possibility of killing innocent people that did not commit that crime. Whilst I do agree that people who do such devastating crimes do not deserve a second chance in society, a life prison sentece without parole gives then no chance of freedom and I also believe that this creates more suffering for the criminal in the long term.</p>
       </div>
   </body>
