--- a/list.html
+++ b/list.html
@@ -14,6 +14,9 @@
 <a href='/'><button class="b /">Home</button></a>
 <a href='list'><button class="b /">List of Human Rights</button></a>
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+<div style="float: right;">
+<h1><u>Human rights I disagree with<u></h1>
+</div>
 <div style="text-align: Left;">
   <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
@@ -48,8 +51,6 @@
   <p "style=color:white;">We are all born free and equal</p>
   </p>
 </div>
-<div style="float: right;">
-<h1><u>Human rights I disagree with<u></h1>
   </body>
 	</center>
 <html>
