--- a/list.html
+++ b/list.html
@@ -14,10 +14,10 @@
 <a href='/'><button class="b /">Home</button></a>
 <a href='list'><button class="b /">List of Human Rights</button></a>
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
-<div style="float: right;">
+<div style="float: right; border: 10px dashed blue; padding: 20px">
 <h1><u>Human rights I disagree with<u></h1>
 </div>
-<div style="text-align: Left;">
+<div style="text-align: Left; border: 10px solid black; padding: 20px;">
   <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
   <p "style=color:white;">The right to a fair trial</p>
