--- a/list.html
+++ b/list.html
@@ -48,9 +48,7 @@
   <p "style=color:white;">Our human rights are protected by law</p>
   <p "style=color:white;">No unfair prison sentences</p>
   <p "style=color:white;">We are always innocent until proven guilty</p>
-  <p "style=color:white;">We are all born free and equal</p>
-  </p>
-</div>
+  <p "style=color:white;">We are all born free and equal</p></div>
   </body>
 	</center>
 <html>
