--- a/list.html
+++ b/list.html
@@ -16,6 +16,8 @@
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
 </center>
 <br>
+<h1><u>The Human Rights</u></h1>
+<br>
 <div style="float: right; border: 10px dashed blue; padding: 10px">
 <h1><u>Human rights I disagree with<u></h1>
 </div>
