--- a/list.html
+++ b/list.html
@@ -24,7 +24,7 @@
 <div style="text-align: Left; border: 10px solid black; padding: 10px;">
   <p>Here is the list of all the human rights:<p>
   <p>The right to life<p>
-  <p "style=color:white;">The right to a fair trial</p>
+  <p "width: fit-content;">The right to a fair trial</p>
   <p "style=color:white;">The right to privacy</p>
   <p "style=color:white;">The right to vote</p>
   <p "style=color:white;">the right to move</p>
