--- a/list.html
+++ b/list.html
@@ -22,26 +22,26 @@
 <h1><u>Human rights I disagree with<u></h1>
 </div>
 <div style="text-align: Left; border: 10px solid black; padding: 10px;">
-  <p>Here is the list of all the human rights:<p>
-  <p>The right to life<p>
+  <p "width: fit-content;">Here is the list of all the human rights:<p>
+  <p "width: fit-content;">The right to life<p>
   <p "width: fit-content;">The right to a fair trial</p>
-  <p "style=color:white;">The right to privacy</p>
-  <p "style=color:white;">The right to vote</p>
-  <p "style=color:white;">the right to move</p>
-  <p "style=color:white;">The right to have a nationality<p>
-  <p "style=color:white;">The right to seek a safe place to live</p>
-  <p "style=color:white;">The right to our own things</p>
-  <p "style=color:white;">The right to freedom of though</p>
-  <p "style=color:white;">The right to freedom of expression</p>
-  <p "style=color:white;">The right to freedom of religion</p>
-  <p "style=color:white;">The right to freedom of assembly</p>
-  <p "style=color:white;">The right to democracy<p>
-  <p "style=color:white;">The right to sercuity</p>
-  <p "style=color:white;">The right to play<p>
-  <p "style=color:white;">The right to food and shelter</p>
-  <p "style=color:white;">The right to education</p>
-  <p "style=color:white;">The right to copyright</p>
-  <p "style=color:white;">The right to a free and fair world</p>
+  <p "width: fit-content;">The right to privacy</p>
+  <p "width: fit-content;">The right to vote</p>
+  <p "width: fit-content;">the right to move</p>
+  <p "width: fit-content;">The right to have a nationality<p>
+  <p "width: fit-content;">The right to seek a safe place to live</p>
+  <p "width: fit-content;">The right to our own things</p>
+  <p "width: fit-content;">The right to freedom of though</p>
+  <p "width: fit-content;">The right to freedom of expression</p>
+  <p "width: fit-content;">The right to freedom of religion</p>
+  <p "width: fit-content;">The right to freedom of assembly</p>
+  <p "width: fit-content;">The right to democracy<p>
+  <p "width: fit-content;">The right to sercuity</p>
+  <p "width: fit-content;">The right to play<p>
+  <p "width: fit-content;">The right to food and shelter</p>
+  <p "width: fit-content;">The right to education</p>
+  <p "width: fit-content;">The right to copyright</p>
+  <p "width: fit-content;">The ae
   <p "style=color:white;">The right to responsibilty</p>
   <p "style=color:white;">We also have workers rights</p>
   <p "style=color:white;">No torture</p>
