--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
 </center>
 <br>
 <div style="float: right; border: 10px dashed blue; padding: 10px">
-<h1><u>Human rights I disagree with<u></h1>
+<h1><u>Human rights I disagree with</u></h1>
 </div>
 <div style="text-align: Left; border: 10px solid black; padding: 10px;">
   <p "width: fit-content;">Here is the list of all the human rights:<p>
