--- a/list.html
+++ b/list.html
@@ -3,8 +3,10 @@
 <head>
  <style>
        body {
-       background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
-	   color: red;
+       background-image: url("https://u.cubeupload.com/derter_menter/20220308.png");
+       background-size: cover;
+       color: red;
+}
     }
     </style>
 	<title>PeopleRights - List</title>
