Change cubeupload URL to repo URL

--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -3,7 +3,7 @@
 <head>
     <style>
     body {
-        background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+        background-image: url("background.png"); 
         color: red;
     }  
 </style>
