--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <center>
     <style>
        body {
-       background-image: url("https://u.cubeupload.com/derter_menter/20220308.png"); 
+       background-image: url("background.png"); 
     }
     </style>
    <head>
