--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
        body {
        background-image: url("background.png"); 
        background-size: cover
+         background-position: center;
     }
     </style>
    <head>
