--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <style>
        body {
        background-image: url("background.png"); 
-       background-size: cover
-         background-position: center;
+       background-size: cover;
     }
     </style>
    <head>
