--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -3,7 +3,8 @@
 <head>
     <style>
     body {
-        background-image: url("background.png"); 
+        background-image: url("background.png") fixed center;
+        background-size: cover;
         color: red;
     }  
 </style>
