Properly adds width fix content to the list

--- a/list.html
+++ b/list.html
@@ -3,11 +3,10 @@
 <head>
  <style>
        body {
-       background-image: url("background.png") fixed center;
+       background-image: url("background.png");
        background-size: cover;
        color: red;
 }
-    }
     </style>
 	<title>PeopleRights - List</title>
 	<link rel="stylesheet" href="styles.css">
@@ -23,7 +22,7 @@
 <div style="float: right; border: 10px dashed blue; padding: 10px">
 <h1><u>Human rights I disagree with</u></h1>
 </div>
-<div style="text-align: Left; border: 10px solid black; padding: 10px;">
+<div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content;">
   <p "width: fit-content;">Here is the list of all the human rights:<p>
   <p "width: fit-content;">The right to life<p>
   <p "width: fit-content;">The right to a fair trial</p>
