--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
 <head>
  <style>
        body {
-       background-image: url("background.png")
+       background-image: url("background.png"); 
        background-size: cover;
        color: red;
 }
