--- a/list.html
+++ b/list.html
@@ -23,7 +23,7 @@
 <h1><u>Human rights I disagree with</u></h1>
 </div>
 <div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content;">
-  <p "width: fit-content;">Here is the list of all the human rights:<p>
+<p style="font-size:16px"><u><b>Here is the list of all the human rights:</b></u><p>
   <p "width: fit-content;">The right to life<p>
   <p "width: fit-content;">The right to a fair trial</p>
   <p "width: fit-content;">The right to privacy</p>
