--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
 <head>
  <style>
        body {
-       background-image: url("background.png"); 
+       background: url(background.png) fixed center;
        background-size: cover;
        color: red;
 }
