--- a/list.html
+++ b/list.html
@@ -19,30 +19,35 @@
 <h1><u>The Human Rights</u></h1>
 </center>
 <br>
-<div style="float: right; border: 10px dashed blue; padding: 10px">
-<h1><u>Human rights I disagree with</u></h1>
+<div style="float: right; border: 10px dashed blue; padding: 10px; margin: 10px;">
+<h1><u>Human rights that can be abused</u></h1>
+<p>Whilst I do agree with most human rights and wish that all humans have the acsess to them, there is certainly some human rights that I disagree with.</p>
+<h2>The right to play</h2>
+<p>There is no denying that playing, wether it is physical or electronically, can make a person morale better and this can even start friendships, pushing over human rights like eqaulity. However, there is no disclaimer in the human right that there should be a limit for "playing time" so that it does not get in the way of the childs educational life.</p>
+<h2>The right to copyright</h2>
+<p>It is important for the original creator of a piece of work to be respected and for their work to be protected so no one can pass it off as there own. However, copyright claims can be easily abused, from the person claiming material was copied by the slighest of simililarities to ignoring other terms like <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>.
 </div>
-<div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content;">
+<div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content; margin: 10px;">
 <p style="font-size:16px"><u><b>Here is the list of all the human rights:</b></u><p>
   <p "width: fit-content;">The right to life<p>
   <p "width: fit-content;">The right to a fair trial</p>
   <p "width: fit-content;">The right to privacy</p>
-  <p "width: fit-content;">The right to vote</p>
+  <p "width: fit-content;">The right to vote</p> v e
   <p "width: fit-content;">the right to move</p>
-  <p "width: fit-content;">The right to have a nationality<p>
+  <p "width: fit-content;">The right to have a nationality</p>
   <p "width: fit-content;">The right to seek a safe place to live</p>
   <p "width: fit-content;">The right to our own things</p>
-  <p "width: fit-content;">The right to freedom of though</p>
+  <p "width: fit-content;">The right to freedom of thought</p>
   <p "width: fit-content;">The right to freedom of expression</p>
   <p "width: fit-content;">The right to freedom of religion</p>
   <p "width: fit-content;">The right to freedom of assembly</p>
-  <p "width: fit-content;">The right to democracy<p>
+  <p "width: fit-content;">The right to democracy</p>
   <p "width: fit-content;">The right to sercuity</p>
-  <p "width: fit-content;">The right to play<p>
+  <p "width: fit-content;">The right to play</p>
   <p "width: fit-content;">The right to food and shelter</p>
   <p "width: fit-content;">The right to education</p>
   <p "width: fit-content;">The right to copyright</p>
-  <p "width: fit-content;">The ae
+  <p "width: fit-content;">The right to a free and fair world</p>
   <p "style=color:white;">The right to responsibilty</p>
   <p "style=color:white;">We also have workers rights</p>
   <p "style=color:white;">No torture</p>
