--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
 <h1><u>The Human Rights</u></h1>
 </center>
 <br>
-<div style="float: right; border: 10px dashed blue; padding: 10px; margin: 10px;">
+<div style="float: right; border: 10px dashed blue; padding: 10px; margin: 10px; width: fit-content;">
 <h1><u>Human rights that can be abused</u></h1>
 <p>Whilst I do agree with most human rights and wish that all humans have the acsess to them, there is certainly some human rights that I disagree with.</p>
 <h2>The right to play</h2>
