--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -38,7 +38,7 @@
       <br>
       <div style=" border: 8px dotted white; padding: 20px;">
         <h1><u>My stance on the death penalty</u></h1>
-      <p>In my opinion, the death penalty should be abolished as no statistic proves that it stops others from commiting crimes because the frightening death penalty punishment scares them and the possibility of killing innocent people that did not commit that crime. Whilst I do agree that people who do such devastating crimes do not deserve a second chance in society, a life prison sentece without parole gives then no chance of freedom and I also believe that this creates more suffering for the criminal in the long term.</p>
+      <p>In my opinion, the death penalty should be abolished as no statistic proves that it stops others from commiting crimes because the frightening death penalty punishment scares them and the possibility of killing innocent people that did not commit that crime. Whilst I do agree that people who do such devastating crimes do not deserve a second chance in society, a life prison sentence without parole gives then no chance of freedom and I also believe that this creates more suffering for the criminal in the long term.</p>
       </div>
   </body>
 </center>
