--- a/list.html
+++ b/list.html
@@ -25,7 +25,10 @@
 <h2>The right to play</h2>
 <p>There is no denying that playing, wether it is physical or electronically, can make a person morale better and this can even start friendships, pushing over human rights like eqaulity. However, there is no disclaimer in the human right that there should be a limit for "playing time" so that it does not get in the way of the childs educational life.</p>
 <h2>The right to copyright</h2>
-<p>It is important for the original creator of a piece of work to be respected and for their work to be protected so no one can pass it off as there own. However, copyright claims can be easily abused, from the person claiming material was copied by the slighest of simililarities to ignoring other terms like <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>.
+<p>It is important for the original creator of a piece of work to be respected and for their work to be protected so no one can pass it off as there own. However, copyright claims can be easily abused, from the person claiming material was copied by the slighest of simililarities to ignoring other terms like <a href="https://en.wikipedia.org/wiki/Fair_use">fair use</a>.</p>
+<h1><u>Overall problem with human rights</u></h1>
+<p>The overall problem with the human rights list is described laconicly in this video:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8UTejZbQQ34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content; margin: 10px;">
 <p style="font-size:16px"><u><b>Here is the list of all the human rights:</b></u><p>
