--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
 <p>The overall problem with the human rights list is described laconicly in this video:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/8UTejZbQQ34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content; margin: 10px;">
+<div style="text-align: Left; border: 10px solid black; padding: 10px; width: fit-content; margin: 10px; float: left;">
 <p style="font-size:16px"><u><b>Here is the list of all the human rights:</b></u><p>
   <p "width: fit-content;">The right to life<p>
   <p "width: fit-content;">The right to a fair trial</p>
