--- a/list.html
+++ b/list.html
@@ -21,7 +21,7 @@
 <br>
 <div style="float: right; border: 10px dashed blue; padding: 10px; width: fit-content; width: 50%;">
 <h1><u>Human rights that can be abused</u></h1>
-<p>Whilst I do agree with most human rights and wish that all humans have the acsess to them, there is certainly some human rights that I disagree with.</p>
+<p>Whilst I do agree with most human rights and wish that all humans have the access to them, there is certainly some human rights that I disagree with.</p>
 <h2>The right to play</h2>
 <p>There is no denying that playing, wether it is physical or electronically, can make a person morale better and this can even start friendships, pushing over human rights like eqaulity. However, there is no disclaimer in the human right that there should be a limit for "playing time" so that it does not get in the way of the childs educational life.</p>
 <h2>The right to copyright</h2>
