--- a/animal.html
+++ b/animal.html
@@ -1,10 +1,15 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>PeopleRights - Animals</titles>
+<title>PeopleRights - Animals</title>
 <link rel="stylesheet" href="styles.css">
   </head>
  <body>
-   <p>Test</p>
-  </body>
+ <center>
+   <h1><u>Should animals have human rights?</h1>
+<div>
+<p>Should aninals, especially pets, have the same human rights as humans? This is a debate that has being going on with human rights activists, and I will lay out the positives and negatives of giving animals human rights and then eventually giving my verdict.</p>
+</div>
+  </center>
+</body>
 </html>
