--- a/animal.html
+++ b/animal.html
@@ -6,10 +6,19 @@
   </head>
  <body>
  <center>
-   <h1><u>Should animals have human rights?</h1>
+   <h1><u>Should animals have human rights?</u></h1>
 <div>
 <p>Should aninals, especially pets, have the same human rights as humans? This is a debate that has being going on with human rights activists, and I will lay out the positives and negatives of giving animals human rights and then eventually giving my verdict.</p>
 </div>
+<div>
+  <h2><u>Speciessim definiton</u></h2>
+ <p>Speciessim is the belief that humans are superior to animals. These people probably believe that aniamls should not get the same rights as humans.</p>
+ </div>
+<div>
+  <h2><u>What rights do apply to animals?</u></h2>
+  <p>Human rights that can apply to animals are explained in this project:</p>
+  
+   </div>
   </center>
 </body>
 </html>
