--- a/animal.html
+++ b/animal.html
@@ -17,7 +17,7 @@
 <div>
   <h2><u>What rights do apply to animals?</u></h2>
   <p>Human rights that can apply to animals are explained in this project:</p>
-  
+  <iframe src="https://turbowarp.org/668603663/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
    </div>
   </center>
 </body>
