--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href='/'><button class="b /">Home</button></a>
     <a href='list'><button class="b /">List of Human Rights</button></a>
     <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+    <a href='animal'><button class="b /">Animals with Human Rights</button></a>
      <p>Hi! This is a website for human rights. This website goes from the full list of human rights to what I think about human rights. 
            I will add videos and projects so you can learn about human rights in stimulating ways, whilst also understanding them written on this site.</p>
 </body>
