Adding animal button

--- a/deathpenalty.html
+++ b/deathpenalty.html
@@ -14,7 +14,8 @@
   <body>
   <a href='/'><button class="b /">Home</button></a>
     <a href='list'><button class="b /">List of Human Rights</button></a>
-      <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+    <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+    <a href='animal'><button class="b /">Animals with Human Rights</button></a>
     <h1><u>The Death Penalty</u></h1>
      <p>In several countries around the world, the death penalty has been the last resort for extremely severe crimes, from multiple murders to drug trafficking.
     But should this be a thing at all?</p>
