Adding animal button

--- a/list.html
+++ b/list.html
@@ -8,6 +8,7 @@
 <a href='/'><button class="b /">Home</button></a>
 <a href='list'><button class="b /">List of Human Rights</button></a>
 <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+<a href='animal'><button class="b /">Animals with Human Rights</button></a>
 <br>
 <h1><u>The Human Rights</u></h1>
 </center>
