Adding all buttons

--- a/animal.html
+++ b/animal.html
@@ -6,6 +6,10 @@
   </head>
  <body>
  <center>
+  <a href='/'><button class="b /">Home</button></a>
+    <a href='list'><button class="b /">List of Human Rights</button></a>
+    <a href='deathpenalty'><button class="b /">Death Penalty</button></a>
+    <a href='animal'><button class="b /">Animals with Human Rights</button></a>
    <h1><u>Should animals have human rights?</u></h1>
 <div>
 <p>Should aninals, especially pets, have the same human rights as humans? This is a debate that has being going on with human rights activists, and I will lay out the positives and negatives of giving animals human rights and then eventually giving my verdict.</p>
