Fixing div code so it shows

--- a/animal.html
+++ b/animal.html
@@ -14,7 +14,7 @@
 <div style=" border: 8px solid red; padding: 20px;">
 <p>Should aninals, especially pets, have the same human rights as humans? This is a debate that has being going on with human rights activists, and I will lay out the positives and negatives of giving animals human rights and then eventually giving my verdict.</p>
 </div>
-<div style: "border: 8px dashed orange; padding: 20px;">
+<div style= "border: 8px dashed orange; padding: 20px;">
   <h2><u>Speciessim definiton</u></h2>
  <p>Speciessim is the belief that humans are superior to animals. These people probably believe that aniamls should not get the same rights as humans.</p>
  </div>
@@ -23,7 +23,7 @@
   <p>Human rights that can apply to animals are explained in this project:</p>
   <iframe src="https://turbowarp.org/668603663/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
    </div>
-<div style:" border: 8px dotted yellow; padding: 20px;">
+<div style=" border: 8px dotted yellow; padding: 20px;">
  <h2><u>Should animals have the same rights as humans?</u></h2>
  <p>It always depends on the situation and what specific human rights it applies to - I do not believe animals should be discriminated against and be used for testing, particulary where testing can be done in more efficient and cheaper ways without animal cruelty, but pets are the humans possesion and certain restrictions are totally reasonable to put in place, like not having the right to a marriage so tonnes of pets do not get born, or that the pets are only allowed to play ay certain times. Whilst pets freedom and rights is important, what is the best for the family needs to be connotated.</p>
   </center>
